change mobile alert

--- a/_layouts/cover.html
+++ b/_layouts/cover.html
@@ -11,6 +11,11 @@ layout: gift-wrap
     <div class="section-header">
         <h1 class="section"> Introduction </h1>
     </div>
+
+    <p class="mobile" id="switch-to-desktop"> </p>
+
+    <br> 
+    
     <p>We’re in a global pandemic — and we’re in an unprecedented national uprising against the police and white
         supremacy, and the ways they render Black life disposable.</p>
 
