--- a/_layouts/gift-wrap.html
+++ b/_layouts/gift-wrap.html
@@ -9,7 +9,8 @@
   <title> Direct Action for Prison Abolition </title>
 
   <link rel="stylesheet" type="text/css" href="{{"/assets/css/layout.css" | relative_url}}">
-  <link href="https://fonts.googleapis.com/css2?family=Miniver&display=swap" rel="stylesheet">
+  <link rel="icon" 
+      href="favicon.ico" />
 </head>
 
 <body>
