--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -368,8 +368,9 @@ p.mobile {
     color: black;
     background-color: lightsalmon;
     padding:  1.5%;;
-    font-size: 2.5vw;
+    font-size: 3vw;
     font-weight: bold;
+    text-align: center;
  }
 @media (max-width: 640px) {
     p.mobile { display: block }
