--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -45,7 +45,7 @@ body {
 
 a:link, a:active, a:visited {
     color: lightsalmon;
-    border-bottom: 0.25vh solid lightsalmon;
+    border-bottom: 0.2vh solid lightsalmon;
     text-decoration: none;
 }
 
@@ -79,7 +79,6 @@ a:hover {
 }
 
 .dropdown-content a {
-    margin-top: 3%;
     margin-bottom: 5%;
     text-align: center;
     text-decoration: none;
@@ -121,7 +120,7 @@ a:hover {
 }
 
 .left {
-    border-right: 2px solid lightsalmon;
+    border-right: 0.3vh solid lightsalmon;
 }
 
 .left::-webkit-scrollbar, .right::-webkit-scrollbar {
@@ -253,8 +252,8 @@ button.current-section {
 
 .nav {
     width: 100%;
-    border-top: 2px solid lightsalmon;
-    padding: 1rem;
+    border-top: 0.3vh solid lightsalmon;
+    padding: 1%;
     height: inherit;
     align-items: center;
 }
@@ -274,6 +273,7 @@ ul li {
 }
 
 .standout {
+    width: 50%;
     font-family: Flux-Bold;
     letter-spacing: auto;
     font-size: 2.5vw;
@@ -284,15 +284,16 @@ li:first-of-type::after {
     font-family: Courier, monospace;
 }
 
+/* 
 h1.toc {
     font-family: Courier, monospace;
     font-size: 3rem;
     font-weight: normal;
     font-style: normal;
     padding-bottom: 3%;
-    border-bottom: 2px solid lightsalmon;
+    border-bottom: 0.4vh solid lightsalmon;
     margin: 0;
-}
+} */
 
 .toc-stack {
     display: flex;
@@ -313,7 +314,7 @@ button {
 button.toc {
     background: transparent;
     color: lightsalmon;
-    border: 2px solid lightsalmon;
+    border: 0.4vh solid lightsalmon;
     border-radius: 15%;
     width: 18vw;
     height: 18vw;
@@ -343,7 +344,7 @@ h1.section {
     font-weight: normal;
     font-style: normal;
     font-size: 1.5vw;
-    border: 0.25vh solid lightsalmon;
+    border: 0.vh solid lightsalmon;
     border-radius: 14px;
     margin: 0px auto;
     padding: 2%;
@@ -356,7 +357,7 @@ h1.section-fill {
     font-weight: normal;
     font-style: normal;
     font-size: 3rem;
-    border: 2px solid lightsalmon;
+    border: 0.4vh solid lightsalmon;
     background: lightsalmon;
     border-radius: 14px;
     margin: 0px auto;
@@ -368,7 +369,7 @@ p.mobile {
     color: black;
     background-color: lightsalmon;
     padding:  1.5%;;
-    font-size: 3vw;
+    font-size: 3git vw;
     font-weight: bold;
     text-align: center;
  }
@@ -428,7 +429,7 @@ img:hover {
 }
 
 img.arrow {
-    height: 20%;
+    height: 10%;
     -webkit-filter: none;
     -moz-filter: none;
     -ms-filter: none;
