put images on bus drivers page, layout adjustments

--- a/_layouts/cover.html
+++ b/_layouts/cover.html
@@ -15,7 +15,7 @@ layout: gift-wrap
     <p class="mobile" id="switch-to-desktop"> </p>
 
     <br> 
-    
+
     <p>We’re in a global pandemic — and we’re in an unprecedented national uprising against the police and white
         supremacy, and the ways they render Black life disposable.</p>
 
@@ -27,7 +27,7 @@ layout: gift-wrap
         were not. At the same time, government officials with control over jails and prisons felt increasing pressure to
         release at least some people who were locked up, due to the rampant spread of COVID-19.</p>
 
-    <p><img src="/da4a/assets/images/introduction/abolition-is-a-act-of-creation.jpg" alt="A sidewalk mural which says &quot;abolition is a act of creation&quot; surrounded in green vines and yellow flowers.
+    <p><img src="/da4a/assets/images/introduction/abolition-is-a-act-of-creation.jpg" alt="A sidewalk mural which says &quot;abolition is an act of creation&quot; surrounded in green vines and yellow flowers.
 " /></p>
     <blockquote>
         <p>A sidewalk mural which says “abolition is a act of creation” surrounded in green vines and yellow flowers.
