add image descriptions

--- a/_layouts/cover.html
+++ b/_layouts/cover.html
@@ -14,7 +14,7 @@ layout: gift-wrap
 
     <p class="mobile" id="switch-to-desktop"> </p>
 
-    <br> 
+    <br>
 
     <p>We’re in a global pandemic — and we’re in an unprecedented national uprising against the police and white
         supremacy, and the ways they render Black life disposable.</p>
@@ -27,8 +27,8 @@ layout: gift-wrap
         were not. At the same time, government officials with control over jails and prisons felt increasing pressure to
         release at least some people who were locked up, due to the rampant spread of COVID-19.</p>
 
-    <p><img src="/assets/images/introduction/abolition-is-a-act-of-creation.jpg" alt="A sidewalk mural which says &quot;abolition is an act of creation&quot; surrounded in green vines and yellow flowers.
-" /></p>
+    <p><img src="/assets/images/introduction/abolition-is-a-act-of-creation.jpg" 
+        alt="Text in a sidewalk chalk mural reads: &quot;Abolition is a act of creation,&quot; and is surrounded in green vines and yellow flowers."/></p>
     <blockquote>
         <p>A sidewalk mural which says “abolition is a act of creation” surrounded in green vines and yellow flowers.
             Image via <a href="https://commons.wikimedia.org/w/index.php?curid=92698146">Andrew Ratto/Wikimedia</a>.</p>
@@ -55,7 +55,7 @@ layout: gift-wrap
         action, in solidarity with protesters, and with those who face the brunt of criminalization.</p>
 
     <p><img src="/assets/images/introduction/power-to-the-people.jpg"
-            alt="This cardboard sign is a rectangular piece of cardboard with handwritten text in black marker. The text reads &quot;Power to the People&quot;. There is a narrow flat stick of wood as a handle mounted to the back with adhesive. There are also four strips of black tape across the handle and the back of the sign. There are two names written on the back." />
+            alt="A rectangular piece of cardboard. Hand written black letters on the sign read, &quot;Power to the People.&quot;" />
     </p>
     <blockquote>
         <p>A protest sign which says, “power to the people.” Image via Collection of the Smithsonian National Museum of
