--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -320,6 +320,28 @@ button.toc:hover {
     background: lightsalmon;
 }
 
+button.language {
+    background: black;
+    color: lightsalmon;
+    border: 0.4vh solid lightsalmon;
+    border-radius: 100%;
+    font-family: Flux-Regular, Helvetica, sans-serif;
+    font-size: 2vw;
+    padding: 5%;
+    margin: 0.5%;
+    text-align: center;
+    position: absolute;
+    bottom: 22%;
+    left: 0%; 
+    transform: scale(0.625) skew(-3deg, -3deg);; 
+}
+
+.language:hover {
+    background: lightsalmon;
+    color: black;
+}
+
+
 .section-header {
     display: flex;
     justify-content: center;
